--- a/speakers/templates/edit.html
+++ b/speakers/templates/edit.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Edit speaker details</title>
     {%load static%}
     <link rel="stylesheet" href="{% static 'css/style.css'%}">
 </head>
 <body>
-    <form action="/update/{{speaker.id}}" method="post">
+    <form action="/update/{{speaker.id}}" method="post" class="form1">
       {%csrf_token%}
       <div>
         <br>
         <p>
-            <h3>Update Details</h3>
+            <h3><u>Update Details</u></h3>
         </p>
       </div>
       <div>
@@ -42,7 +42,7 @@
       </div>
      <div>
         <br>
-        <button type="submit">Update</button>
+        <button type="submit" class="submit">Update</button>
      </div>
     </form>
 </body>
