--- a/speakers/static/css/style.css
+++ b/speakers/static/css/style.css
@@ -24,6 +24,11 @@ table{
     border-collapse: collapse;
     width: 100%;
 }
+th{
+    background-color: green;
+    color: white;
+    height: 50px;
+}
 th,td{
     border: 1px solid black;
 }
